recursion.logo.koch.Crab.scala.error
Erreur de compilation :
Crab:5: error: not found: value lenght
    crab(levels -1,lenght/Math.sqrt(2))
                   ^